# beginners

./: CMakeLists.txt  hello_world.cpp  main.cpp
jupyter/: Hello_world.ipynb  Lection_1.ipynb  Multithreading.ipynb  Serializing.ipynb  Unit-testing (GoogleTest).ipynb  alignment.ipynb  conditions.ipynb  cycles.ipynb  define.ipynb  exceptions.ipynb  files.ipynb  functions.ipynb  operators.ipynb  types.ipynb  unit_tests.ipynb  variables.ipynb  variadic templates and parameter unpacking.ipynb
l1_syntax/: homework_solution.h  launch.h  syntax.h
l2_stl/: containers.cpp  containers.h  iostream.cpp  iostream.h  launch.h  set_map.cpp  set_map.h  strings.cpp  strings.h  utility.cpp  utility.h
l3_functions/: funcs.h  globals.cpp  globals.h  homework.txt  homework_solution.h  launch.h
l4_pointers/: homework.txt  launch.h  pointers.h  queue.h  queue.tpp  stack.h  stack.tpp
l5_oop/: constructor_destructor.h  encapsulation.h  inheritance.h  intro.h  launch.h  multiple_inheritance.h  oop_advanced.h  operator_overloading.h  polymorphism.h  virtual.h
lection_1_syntax/: homework.txt  syntax.cpp
lection_2_stl/: containers.cpp  containers.h  homework.txt  iostream.cpp  iostream.h  set_map.cpp  set_map.h  strings.cpp  strings.h  utility.cpp  utility.h
lection_3_functions/: funcs.h
