cmake_minimum_required(VERSION 3.20)
project(beginners)

set(CMAKE_CXX_STANDARD 17)

add_executable(beginners main.cpp lection_2_stl/iostream.h lection_2_stl/iostream.cpp lection_2_stl/strings.h lection_2_stl/strings.cpp lection_2_stl/containers.cpp lection_2_stl/containers.h lection_2_stl/utility.cpp lection_2_stl/utility.h lection_2_stl/set_map.cpp lection_2_stl/set_map.h)
